--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
 	</parent>
 	<groupId>com.roughandcheap</groupId>
 	<artifactId>tiny-closuretable-dao</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.5-SNAPSHOT</version>
 	<name>tiny-closuretable-dao</name>
 	<description>Tiny Closuretable Dao</description>
+    <packaging>jar</packaging>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -47,9 +48,19 @@
 	</dependencies>
 	<build>
 		<plugins>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>exec</classifier>
+                        </configuration>
+                    </execution>
+                </executions>
 				<configuration>
 					<image>
 						<builder>paketobuildpacks/builder-jammy-base:latest</builder>
@@ -61,7 +72,7 @@
 						</exclude>
 					</excludes>
 				</configuration>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 
